[gd_scene load_steps=6 format=3 uid="uid://cajo7kqv8n531"]

[ext_resource type="Script" uid="uid://bttolju65bfx2" path="res://Scripts/pick-upable.gd" id="1_ehqkx"]
[ext_resource type="Texture2D" uid="uid://c8241oxvk6d36" path="res://Assets/Objetos/Perlas/perla 1 .png" id="2_1q6jp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ehqkx"]
radius = 16.4924

[sub_resource type="CircleShape2D" id="CircleShape2D_o1nje"]
radius = 128.561

[sub_resource type="CircleShape2D" id="CircleShape2D_k8d6a"]
radius = 128.062

[node name="Perla_01" type="StaticBody2D"]
z_index = -1
y_sort_enabled = true
scale = Vector2(0.25, 0.25)
script = ExtResource("1_ehqkx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1q6jp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ehqkx")

[node name="Area2D_Monitorable" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Monitorable"]
shape = SubResource("CircleShape2D_o1nje")

[node name="Area2D_Monitoring" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Monitoring"]
shape = SubResource("CircleShape2D_k8d6a")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="Area2D_Monitoring" to="." method="_on_area_2d_monitoring_area_entered"]
